fixed bug in the navbar alignment

--- a/style.css
+++ b/style.css
@@ -14,17 +14,16 @@ header {
 }
 
 .header-container{
-    
     display: flex;
     justify-content: center;
-    padding: 20px;
-    gap: 30%;
+    padding: 20px 0px;
 }
 
 .logo {
     color: #F9FAF8;
     font-size: 24px;
     font-weight: bold;
+    margin-left: 20px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -33,21 +32,18 @@ header {
 .navbar {
     width: 90%;
     max-width: 1000px;
-   /* margin: 0 auto;*/
-    /*padding: 10px 20px;*/
-  
 }
 
 .navbar ul {
     font-size: 18px;
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between;   
 }
 
 .navbar li {
     margin-right: 10px;
     list-style: none;
+    
 }
 
 .navbar a {
@@ -63,10 +59,10 @@ header {
 .links {
     display: flex;
     justify-content: flex-end;
-    }
+}
 
 .content-container {
-    margin: 50px 20px;
+    margin: 20px 10px;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -80,7 +76,6 @@ header {
     font-weight: 900;
     width: 70%;
     margin-bottom: 10px;
-
 }
 
 .content-text p {
@@ -110,14 +105,15 @@ header {
     background-color: #e4cf65;
 }
 
-
 .placeholder {
-    width: 200px;
-    height: 300px;
-
+    width: 350px;
+    height: 175px;
+    margin-top: 20px;
+    padding: 0;
+    background-color: #777777;
     color: #F9FAF8;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
